Update JVM settings for scripts (#5127)
* Remove MaxDirectMemorySize settings

* Update values.yaml